# Opus0

./: .gitignore  README.md
ai-backend/: pyproject.toml  run.py  test_e2b_code_interpreter.py
ai-backend/app/: db.py  main.py
ai-backend/app/agents/: code_interpreter_agent.py  manager_bot.py  sub_question_agent.py  web_scraper_agent.py
ai-backend/app/api/routes/: chat.py
ai-backend/app/core/: config.py
ai-backend/app/data/: internet_data.txt
ai-backend/app/services/: langchain_service.py
backend/: index.js  package-lock.json  package.json
backend/controllers/: openaiController.js
backend/routes/: apiRoutes.js
backend/services/: openaiService.js
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.jsx  commands.js  index.css
frontend/src/components/: ChatArea.jsx  CommandSuggestion.jsx  Header.jsx  SearchBar.jsx  Sidebar.jsx
frontend/src/components/data/: sidebarData.ts
frontend/src/components/file-explorer/: FileExplorerView.tsx  FileItem.tsx  FolderItem.tsx
frontend/src/components/header/: ChatSettingsConfig.ts  ChatSettingsItem.tsx  Header.tsx
frontend/src/components/sidebar/: ExpandedSidebar.tsx  Folder.tsx  QuickAccess.tsx  QuickAccessItem.tsx  RecentChats.tsx  Sidebar.tsx
frontend/src/components/ui/: Button.tsx  Heading.tsx  SubHeading.tsx
frontend/src/contexts/: MessageContext.jsx
frontend/src/hooks/: useChatManagement.jsx  useInputHandling.jsx  useMessageHandling.jsx  useTextareaAutoResize.jsx
frontend/src/pages/: HomePage.jsx
frontend/src/services/: apiService.js  socket.js
